Collect to List - changed to .toList(). Other minor changes